--- a/data/virginia_skilled_nursing_facility/facility/README
+++ b/data/virginia_skilled_nursing_facility/facility/README
@@ -1,1 +1,2 @@
-
+This folder contains information from The Centers for Medicare & Medicaid Services on SNF facilities 
+https://data.cms.gov/provider-data/search?theme=Nursing%20homes%20including%20rehab%20services.
