--- a/data/virginia_skilled_nursing_facility/residents/README
+++ b/data/virginia_skilled_nursing_facility/residents/README
@@ -1,5 +1,5 @@
 This folder contains data from Brown University's School of Public Health. LTCfocus.org provides data on nursing home 
 care in the US. Our goal is to allow researchers to trace relationships between state policies, local market forces, 
 and the quality of long-term care and enable policymakers to craft state and local guidelines that promote high-quality, 
-cost-effective, equitable care for older Americans. The data dictionary is in the virginia_skilled_nursing_facility/metadata
-folder.
+cost-effective, equitable care for older Americans. The data dictionary and documentatontis in the 
+virginia_skilled_nursing_facility/metadata folder.
