--- a/data/community/README
+++ b/data/community/README
@@ -1,1 +1,2 @@
-
+This folder includes data to estimate community resilience at the county level and the risk of an extreme climate change riverine and coastal
+flooding events at the census track level.  
