--- a/data/virginia_skilled_nursing_facility/metadata/README
+++ b/data/virginia_skilled_nursing_facility/metadata/README
@@ -1,1 +1,1 @@
-This folder contains the data dictionaries and documentation for the data files.
+This folder contains the data dictionaries and documentation for the skilled nursing facility data files.
