--- a/data/community/metadata/README
+++ b/data/community/metadata/README
@@ -1,1 +1,4 @@
-This folder contains the data dictionaries and documentation for the community data files.
+This folder contains the data dictionaries and documentation for the community data files. The FEMA Natonal Risk Index technical
+document is too large to uplaod to guthub, it can be found at 
+https://www.fema.gov/sites/default/files/documents/fema_national-risk-index_technical-documentation.pdf.
+
