--- a/data/community/climate_change_risk/README
+++ b/data/community/climate_change_risk/README
@@ -1,1 +1,8 @@
-
+The National Risk Index is a dataset and online tool to help illustrate the U.S. communities most at
+risk for 18 natural hazards. It was designed and built by FEMA in close collaboration with various
+stakeholders and partners in academia; local, state and federal government; and private industry.
+The Risk Index leverages available source data for natural hazard and community risk factors to
+develop a baseline relative risk measurement for each U.S. county and Census tract. The National
+Risk Index is intended to help users better understand the natural hazard risk of their communities.
+Intended users include planners and emergency managers at the local, regional, state, and federal
+levels, as well as other decision makers and interested members of the general public
