--- a/data/documents/README
+++ b/data/documents/README
@@ -1,1 +1,2 @@
-
+The folder contains products such as visualizations and data tables as well as a literature folder on 
+Skilled Nursing Facilities topics relevant to this use-case.
