--- a/documents/README
+++ b/documents/README
@@ -1,1 +1,1 @@
-
+This folder contains products from the use-case such as visualizations and data tables as well as literature on Skilled Nursing Facilities.
