--- a/data/community/climate_change_risk/meta_data/README
+++ b/data/community/climate_change_risk/meta_data/README
@@ -1,1 +1,2 @@
-This folder contains the data dictionary and technical documents for the climate change data files.
+This folder contains the data dictionary climate change data files. The techncial document is too large to be uploaded to 
+GitHub but can be viewed and downloaded at: https://www.fema.gov/sites/default/files/documents/fema_national-risk-index_technical-documentation.pdf.
