--- a/documents/products/data_tables/README
+++ b/documents/products/data_tables/README
@@ -1,1 +1,2 @@
-
+This folder contains two data .csv files, with with all the data that was used an derived for the virginia counties and independent cities 
+and the other for skilled nursing facilities.
