--- a/documents/products/data_tables/community/README
+++ b/documents/products/data_tables/community/README
@@ -1,1 +1,2 @@
-
+This folder contains two .csv files, with with all the data that was used and derived for the virginia counties and independent cities 
+and the other contains the meta data.
