--- a/documents/products/data_tables/skilled_nursing_facility/README
+++ b/documents/products/data_tables/skilled_nursing_facility/README
@@ -1,1 +1,2 @@
-
+This folder contains two .csv files, with with all the data that was used and derived for the 283 skilled nursing facilities 
+and the other contains the meta data.
