--- a/data/README
+++ b/data/README
@@ -1,5 +1,5 @@
-The data folder is has three folders: 
-community data sets that contains the variables we used for climate change risk, resilience, and demographics; 
-skilled nursing facility data sets that contains the variables we used for ; and 
-the final is for proprietary data which contains a README file describing the proprietary data with links to papers that describe
-their construction or in one case a link to the commerical website.
+The data folder is has three subfolders for: 
+community data sets that are separated into three folders for climate change risk, resilience, and demographic data; 
+skilled nursing facility data sets that are separated into four folders for facilty, owners, nursing staff, and residents; and 
+proprietary data which contains a single README file describing the proprietary data with links to papers that describe their 
+construction or in one case a link to the commerical website.
